--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions test12
-
 name: CI
 
 env:
@@ -9,8 +7,6 @@ env:
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -29,7 +25,8 @@ jobs:
       id: gh_ws
       shell: pwsh
       run: |
-        $full_server_name={{ $env:DB_Server_Name }}.database.usgovcloudapi.net
+        $env:DB_Server_Name
+        $full_server_name= ${{ env:DB_Server_Name }}.database.usgovcloudapi.net
         $full_server_name
         env:
           DB_Server_Name: ${{ env.SERVER_NAME }}
