--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       id: gh_ws
       shell: pwsh
       run: |
-        ${{ env:DB_Server_Name }}
-        $full_server_name= ${{ env:DB_Server_Name }}.database.usgovcloudapi.net
-        $full_server_name
+
+        echo "${{ env:DB_Server_Name }}.database.usgovcloudapi.net"
+
         env:
           DB_Server_Name: ${{ env.SERVER_NAME }}
