--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
       id: gh_ws
       shell: pwsh
       run: |
-        echo "${{ env:DB_Server_Name }}.database.usgovcloudapi.net"
+        echo $env:DB_Server_Name.database.usgovcloudapi.net"
       env:
           DB_Server_Name: ${{ env.SERVER_NAME }}
