--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,6 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    #- uses: actions/checkout@v2
-   
     - name: test
       id: gh_ws
       shell: pwsh
@@ -29,3 +26,16 @@ jobs:
         echo $test
       env:
           DB_Server_Name: ${{ env.SERVER_NAME }}
+
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+    # Login to Azure
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    # Deploy to Azure SQL
+    - uses: azure/sql-action@v1
+      with:
+        server-name: ${{ secrets.AZURE_SQL_SERVER_NAME }}
+        connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
+        sql-file: 'sql/deploy.sql'
